<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color">

    <TextView
        android:id="@+id/notification_settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_settings_header"
        style="@style/header"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/vibrations_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibration_switch_header"
        android:layout_margin="20dp"
        android:textColor="@color/app_text_color"
        android:textSize="20sp"
        android:layout_below="@id/notification_settings_header"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sound_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sound_switch_header"
        android:layout_margin="20dp"
        android:textColor="@color/app_text_color"
        android:textSize="20sp"
        android:layout_below="@id/vibrations_switch"/>

</RelativeLayout>